na meeting met pavel
jaja

--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -84,6 +84,18 @@
   tag = abbr
 }
 
+\DeclareAcronym{det}{
+  short = \tsc{det} ,
+  long  = determiner ,
+  tag = abbr
+}
+
+\DeclareAcronym{sbjv}{
+  short = \tsc{sbjv} ,
+  long  = subjunctive ,
+  tag = abbr
+}
+
 \DeclareAcronym{subj}{
   short = \tsc{subj} ,
   long  = subject ,
@@ -96,11 +108,10 @@
   tag = abbr
 }
 
-
 \DeclareAcronym{int}{
-  short = \tsc{int} ,
-  long  = internal case ,
-  tag = abbr
+ short = \tsc{int} ,
+ long  = internal case ,
+ tag = abbr
 }
 
 \DeclareAcronym{ext}{
@@ -151,6 +162,12 @@
   tag = abbr
 }
 
+\DeclareAcronym{dem}{
+  short = \tsc{dem} ,
+  long  = demonstrative ,
+  tag = abbr
+}
+
 \DeclareAcronym{rel}{
   short = \tsc{rel} ,
   long  = relative ,
@@ -160,6 +177,18 @@
 \DeclareAcronym{aux}{
   short = \tsc{aux} ,
   long  = auxiliary ,
+  tag = abbr
+}
+
+\DeclareAcronym{cl}{
+  short = \tsc{cl} ,
+  long  = clitic ,
+  tag = abbr
+}
+
+\DeclareAcronym{cmpr}{
+  short = \tsc{cmpr} ,
+  long  = comparative ,
   tag = abbr
 }
 
@@ -175,6 +204,12 @@
   tag = abbr
 }
 
+\DeclareAcronym{opt}{
+  short = \tsc{opt} ,
+  long  = optative ,
+  tag = abbr
+}
+
 \DeclareAcronym{ptcp}{
   short = \tsc{ptcp} ,
   long  = participle ,
@@ -187,22 +222,15 @@
   tag = abbr
 }
 
-\DeclareAcronym{opt}{
-  short = \tsc{opt} ,
-  long  = optative ,
-  tag = abbr
-}
-
-
 \DeclareAcronym{ohg}{
-  short = OHG ,
-  long  = Old High German ,
+  short = Old High German,
+  long  = Old High German,
   tag = abbr
 }
 
 \DeclareAcronym{mg}{
-  short = MG ,
-  long  = Modern German ,
+  short = Modern German,
+  long  = Modern German,
   tag = abbr
 }
 
