--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -28,21 +28,21 @@ I start with the competition between accusative and nominative. Following the ca
 Consider the example in \ref{ex:gothic-acc-nom-rep}, repeated from the introduction. In this example, the internal accusative case competes against the external nominative case.
 The internal case is accusative, as the predicate \tit{frijon} `to love' takes accusative objects.
 The external case is nominative, as the predicate \tit{wisan} `to be' takes nominative subjects.
-The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{acc}.\ac{sg}.\ac{m}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{acc}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is accusative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
 
 \exg. \tbf{þan} \tbf{-ei} \tbf{frijos} siuks ist\\
- \ac{rel}.\ac{acc}.\ac{sg}.\ac{m} -\ac{comp} love.\ac{pres}.2\ac{sg}.\scsub{[acc]} sick be.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
+ \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} love.\ac{pres}.2\ac{sg}.\scsub{[acc]} sick be.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
  `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-acc-nom-rep}
 
 Consider the example in \ref{ex:gothic-nom-acc-rep}, repeated from the introduction. In this example, the the internal nominative case competes against the external accusative case.
 The internal case is nominative, as the predicate \tit{wisan} `to be' takes nominative subjects.
 The external case is accusative, as the predicate \tit{ussiggwan} `to read' takes accusative objects.
-The relative pronoun \tit{þo} `\ac{rel}.\ac{acc}.\ac{sg}.\ac{n}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+The relative pronoun \tit{þo} `\ac{rel}.\ac{sg}.\ac{n}.\ac{acc}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is nominative, the external case is accusative and the relative pronoun appears in nominative case are unattested.
 
 \exg. jah þo \tbf{-ei} \tbf{ist} \tbf{us} \tbf{Laudeikaion} jus ussiggwaid\\
- and \ac{rel}.\ac{acc}.\ac{sg}.\ac{n} -\ac{comp} be.\ac{pres}.3\ac{sg}\scsub{[nom]} from Laodicea you.\ac{pl} read.?.\scsub{[acc]}\\
+ and \ac{rel}.\ac{sg}.\ac{n}.\ac{acc} -\ac{comp} be.\ac{pres}.3\ac{sg}\scsub{[nom]} from Laodicea you.\ac{pl} read.?.\scsub{[acc]}\\
  `and you read the one which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-nom-acc-rep}
 
 I continue with the competition between dative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in nominative.
@@ -50,21 +50,21 @@ I continue with the competition between dative and nominative. Following the cas
 Consider the example in \ref{ex:gothic-dat-nom}, in which the internal dative case competes against the external nominative case.
 The internal case is dative, as the predicate \tit{fraletan} `to forgive' takes dative objects.
 The external case is nominative, as the predicate \tit{frijon} `to love' takes nominative subjects.
-The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{sg}.\ac{m}' appears in the internal case: the dative. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
+The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{dat}' appears in the internal case: the dative. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is dative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
 
 \exg. iþ \tbf{þamm} \tbf{-ei} \tbf{leitil} \tbf{fraletada} leitil frijod\\
- but \ac{rel}.\ac{dat}.\ac{sg}.\ac{m} -\ac{comp} little {forgive}.\ac{pass}.\ac{pres}.3\ac{sg}\scsub{[dat]} little love.?.\scsub{[nom]}\\
+ but \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} little {forgive}.\ac{pass}.\ac{pres}.3\ac{sg}\scsub{[dat]} little love.?.\scsub{[nom]}\\
  `but the one whom little is forgiven loves little' \flushfill{Gothic, \ac{luke} 7:47, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-dat-nom}
 
 Consider the example in \ref{ex:gothic-nom-dat}, in which the internal nominative case competes against the external dative case.
 The internal case is nominative, as the predicate \tit{wisan} `to be' takes nominative subjects.
 The external case is dative, as the predicate \tit{fraþjan} `to think about' takes dative indirect objects.
-The relative pronoun \tit{þaim} `\ac{rel}.\ac{dat}.\ac{pl}.\ac{n}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+The relative pronoun \tit{þaim} `\ac{rel}.\ac{pl}.\ac{n}.\ac{dat}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is nominative, the external case is dative and the relative pronoun appears in nominative case are unattested.
 
 \exg. þaim \tbf{-ei} \tbf{iupa} \tbf{sind} fraþjaiþ \\
- \ac{rel}.\ac{dat}.\ac{pl}.\ac{n} -\ac{comp} above be.\ac{pres}.3\ac{pl}\scsub{[nom]} {think about}.\tsc{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]}\\
+ \ac{rel}.\ac{pl}.\ac{n}.\ac{dat} -\ac{comp} above be.\ac{pres}.3\ac{pl}\scsub{[nom]} {think about}.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]}\\
  `think about those which are above' \flushfill{Gothic, \ac{col} 3:2, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-nom-dat}
 
 I end with the competition between dative and accusative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in accusative.
@@ -79,21 +79,21 @@ There is reason to believe that this missing occurrence is due to the above ment
 \tit{Ana} `on' takes dative complements when the PP is interpreted as locational. \tit{Ana} `on' takes accusative complements when the PP is interpreted as directional. \tit{Ana þammei} `on that' in \ref{ex:gothic-acc-dat} refers to a location.
 }
 The external case is accusative, as the predicate \tit{ushafjan} `to pick up' takes accusative objects.
-The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{sg}.\ac{n}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{sg}.\ac{n}.\ac{dat}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is dative, the external case is accusative and the relative pronoun appears in accusative case are unattested.
 
 \exg. ushafjands \tbf{ana} \tbf{þamm} \tbf{-ei} \tbf{lag}\\
-{pick up}.\ac{pres}.\ac{ptcp}\scsub{[acc]} on\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{sg}.\ac{n} -\ac{comp} lie.\ac{pret}.3\ac{sg}\\
+{pick up}.\ac{pres}.\ac{ptcp}\scsub{[acc]} on\scsub{[dat]} \ac{rel}.\ac{sg}.\ac{n}.\ac{dat} -\ac{comp} lie.\ac{pret}.3\ac{sg}\\
 `picking up that what he lay on' \flushfill{Gothic, \ac{luke} 5:25, adapted from \pgcitealt{harbert1978}{343}}\label{ex:gothic-acc-dat}
 
 Consider the example in \ref{ex:gothic-dat-acc}, in which the internal accusative case competes against the external dative case.
 The internal case is accusative, as the predicate \tit{insandjan} `to send' takes accusative objects.
 The external case is dative, as the predicate \tit{galaubjan} `to believe' takes dative objects.
-The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{sg}.\ac{m}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{dat}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in accusative case are unattested.
 
 \exg. ei galaubjaiþ þamm \tbf{-ei} \tbf{insandida} \tbf{jains}\\
-that believe.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{sg}.\ac{m} -\tsc{comp} {send}.\ac{pret}.3\ac{sg}\scsub{[acc]} \tsc{dem}.\ac{nom}.3\ac{sg}.\ac{m}\\
+that believe.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]} \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} {send}.\ac{pret}.3\ac{sg}\scsub{[acc]} \ac{dem}.\ac{nom}.3\ac{sg}.\ac{m}\\
 `that you believe in him whom he sent' \flushfill{Gothic, \ac{john} 6:29}\label{ex:gothic-dat-acc}
 
 A summary of the Gothic data as a whole is given in Table \ref{tbl:summary-gothic}. The left column shows the internal case between square brackets. The upper row shows the external case between square brackets. The other cells indicate the case of the relative pronoun. The diagonal is left blank, because these are instances in which the internal and external case match, and there is no case competition taking place.
@@ -495,10 +495,10 @@ According to \citet{keenan1977}, ergative-absolutive languages form a counterexa
 
 \ex.\label{ex:dyirbal-decl}
 \ag. balan d̦ugumbil ɲina-ɲu\\
- \tsc{det}.\tsc{abs} woman.\tsc{abs} sit-\tsc{pass}\\
+ \ac{det}.\ac{abs} woman.\ac{abs} sit-\ac{pass}\\
  `The woman is sitting down.'\label{ex:dyirbal-intra}
 \bg. ŋad̦a balan d̦ugumbil buŗa-n\\
- I.\tsc{erg} \tsc{det}.\tsc{abs} woman.\tsc{abs} see-\tsc{pres/past}\\
+ I.\ac{erg} \ac{det}.\ac{abs} woman.\ac{abs} see-\ac{pres}/\ac{pst}\\
  `I am watching the woman.'\flushfill{Dyirbal, \pgcitealt{dixon1972}{100}, my boldfacing}\label{ex:dyirbal-tra}
 
 A relative clause in Dyirbal follows its head, and marks the predicate of the relative clause with the relative suffix \tit{-ŋu}..
@@ -507,10 +507,10 @@ In \ref{ex:dyirbal-abs-do}, the absolutive object \tit{d̦ugumbil} `woman' from 
 
 \ex.
 \ag. ŋad̦a balan \tbf{d̦ugumbil} ɲina-ŋu buŗa-n\\
- I.\tsc{erg} \tsc{det}.\tsc{abs} woman.\tsc{abs} sit-\tsc{rel} see-\tsc{pres/past}\\
+ I.\ac{erg} \ac{det}.\ac{abs} woman.\ac{abs} sit-\ac{rel} see-\ac{pres}\ac{pst}\\
  `I am watching the woman who is sitting down.'\flushfill{Dyirbal, \pgcitealt{dixon1972}{100}, my boldfacing}\label{ex:dyirbal-abs-sub}
 \bg. balan \tbf{d̦ugumbil} ŋad̦a buŗa-ŋu ɲina-ɲu\\
- \tsc{det}.\tsc{abs} woman.\tsc{abs} I see-\tsc{rel} sit-\tsc{pass}\\
+ \ac{det}.\ac{abs} woman.\ac{abs} I see-\ac{rel} sit-\ac{pass}\\
  `The woman whom I am watching is sitting down.'\flushfill{Dyirbal, \pgcitealt{dixon1972}{100}, my boldfacing}\label{ex:dyirbal-abs-do}
 
 Ergatives (for instance the ergative subject \tit{ŋad̦a} `I' in \ref{ex:dyirbal-tra}) cannot be directly relativized. They have to be promoted to absolutives first, creating a passive-like structure. In other words, only relativization of absolutives is possible, ergatives cannot be relativized.
